# rust_kern

./: Cargo.toml  LICENSE  README.md  build.rs  linker.ld  x86_64-rust_kern.json
.cargo/: config.toml
src/: addr.rs  gdt.rs  idt.rs  init.rs  init_mutex.rs  interrupts.rs  io_port.rs  ipi.rs  lib.rs  main.rs  percpu.rs  vga_buffer.rs
src/acpi/: mod.rs
src/allocator/: free_list.rs  mod.rs  simple_allocator.rs
src/asm/x86_64/: trampoline.asm
src/devices/: hpet.rs  io_apic.rs  local_apic.rs  mod.rs  pic.rs
src/interrupts/: exceptions.rs  interrupt_macros.rs  ipi.rs  irq.rs  mod.rs
src/paging/: heap_region.rs  hyperspace.rs  kernel_stack.rs  mapper.rs  mod.rs  page_entry.rs  stacks.rs  table.rs
src/phys_alloc/: frame.rs  frame_allocator.rs  mod.rs  page.rs  page_table.rs
src/physmem/: bump.rs  frame_database.rs  mod.rs
src/scheduler/: arch_context.rs  mod.rs  reschedule.rs  task.rs
src/types/: frame.rs  mod.rs  page.rs  page_size.rs  page_table.rs  phys.rs  virt.rs
tests/: basic_boot.rs  stack_overflow.rs
userland/init/: Cargo.toml
userland/init/.cargo/: config.toml
userland/init/src/: main.rs
