[package]
name = "rust_kern"
version = "0.1.0"
authors = ["Stewart Tootill <stootill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"
bitflags = "1.2.1"
bootloader = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
rlibc = "1.0.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.11.0"

[dependencies.x86]
version = "0.32.0"
default-features = false

[profile.dev]

[profile.release]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 30

[[test]]
name = "stack_overflow"
harness = false